<resources>
    <string name="app_name">尬聊</string>
    <string-array name="ProfileEditActivity_SexList">
        <item name="Man">男</item>
        <item name="Woman">女</item>
    </string-array>
    <string-array name="NotificationMessageActivity_Subtitle">
        <item name="Information">好友通知</item>
        <item name="Moments">系统信息</item>
    </string-array>
    <string-array name="ContactProfile_TabTitle">
        <item name="ChatSetting">聊天设置</item>
        <item name="Moments">动态</item>
        <item name="Motion">运动</item>
    </string-array>
    <string-array name="SplashActivity_Titles">
        <item name="Splash_1">Easy to find events</item>
        <item name="Splash_2">Fixed a Date for Event</item>
        <item name="Splash_3">Meet with new folks</item>
    </string-array>
    <string name="SplashActivity_Content">There are many variations of passages of Lorem Ipsum available，but the majority have suffered alteration.</string>
    <string name="DateFormat_yyyyMMdd">yyyy年MM月dd日</string>
    <string name="PermissionMiss">缺少相关权限，无法使用该功能</string>
    <string name="PermissionDialog_Help">无法使用该功能</string>
    <string name="PermissionDialog_MissPermissionHint">当前应用缺少必要权限。\n请点击“设置”-“权限”-开启所需权限。\n最后点击两次后退按钮，即可返回。</string>
    <string name="PermissionDialog_Cancel">取消</string>
    <string name="PermissionDialog_Setting">设置</string>
    <string name="HomeBottomNavigationTitle_Chat">聊天</string>
    <string name="HomeBottomNavigationTitle_Contact">联系人</string>
    <string name="HomeBottomNavigationTitle_Moments">动态</string>
    <string name="HomeBottomNavigationTitle_Profile">设置</string>
    <string name="LoginActivity_Error_NoneInput">账号或密码不能为空</string>
    <string name="LoginActivity_Error_PhoneNumber">手机号码格式不正确</string>
    <string name="LoginActivity_Error_PasswordLength">密码的长度不能小于</string>
    <string name="LoginActivity_Error_IllegalPassword">密码不合法,请保证密码只含数字和字母,且长度为8至16位</string>
    <string name="LoginActivity_Error_IllegalNickname">昵称非法,昵称只能由长度1至16的汉字、字幕、数字、下划线组成</string>
    <string name="LoginActivity_Error_NoneVerify">请将验证码输入完整</string>
    <string name="LoginActivity_Layout_Register">注册</string>
    <string name="LoginActivity_Layout_Login">登录</string>
    <string name="LoginActivity_Layout_Back">返回上一步</string>
    <string name="LoginActivity_Layout_Username">手机号</string>
    <string name="LoginActivity_Layout_InputPassword">密码</string>
    <string name="LoginActivity_Layout_NonUsernameHint">你还没有一个帐号？</string>
    <string name="LoginActivity_Layout_LoginOtherHint">登录其他账号？</string>
    <string name="LoginActivity_Layout_InputNick">昵称</string>
    <string name="LoginActivity_Layout_Confirm">再次输入密码</string>
    <string name="LoginActivity_Layout_HasUsernameHint">你已经有一个帐号？</string>
    <string name="LoginActivity_Layout_InputVerifyCode">请输入验证码</string>
    <string name="LoginActivity_Layout_VerifyCodeHint">验证码已经发送至：+86 </string>
    <string name="LoginActivity_Layout_Resend">重新发送</string>
    <string name="LoginActivity_Layout_CopyrightHint">Copyright © 2017-2018 咸鱼科技 版权所有</string>
    <string name="LoginActivity_Error_Resending">正在发送</string>
    <string name="LoadMoreHint_Default">我是有底线的</string>
    <string name="LoadMoreHint_None">没有找到任何的信息</string>
    <string name="LoadMoreHint_NoMore">没有更多的信息</string>
    <string name="LoadMoreHint_LoadingMore">正在加载更多信息</string>
    <string name="LoadMoreHint_LoadFail">加载更多消息失败</string>
    <string name="ChatActivity_SlideCancelSend">上滑取消发送</string>
    <string name="ChatActivity_UpCancelSend">松手取消发送</string>
    <string name="ChatActivity_VoiceRecorderHint">按住后说话</string>
    <string name="ChatActivity_VoiceRecorderFail">录音失败，请稍后再试！</string>
    <string name="ChatActivity_VoiceRecorderVeryShort">录音时间太短</string>
    <string name="ProgressHint_Default">正在处理...</string>
    <string name="ProgressHint_Search">正在搜索...</string>
    <string name="ProgressHint_Send">正在发送...</string>
    <string name="ProgressHint_Add">正在添加...</string>
    <string name="ProgressHint_Delete">正在删除...</string>
    <string name="ProgressHint_Save">正在保存...</string>
    <string name="ProgressHint_Create">正在创建...</string>
    <string name="ProgressHint_Modify">正在修改...</string>
    <string name="ProgressHint_Quit">正在退出...</string>
    <string name="ProgressHint_Crop">正在裁剪...</string>
    <string name="ProgressHint_Decode">正在解析...</string>
    <string name="ProgressHint_DownloadVideo">正在下载视频\n(%d%%)</string>
    <string name="MessageSummary_LocationInfo">[位置信息]</string>
    <string name="MessageSummary_ImageInfo">[图片信息]</string>
    <string name="MessageSummary_VoiceInfo">[语音信息]</string>
    <string name="MessageSummary_VideoInfo">[视频信息]</string>
    <string name="MessageSummary_EmotionInfo">[表情]</string>
    <string name="MessageSummary_FileInfo">[文件信息]</string>
    <string name="MessageSummary_ContactNtf_Accept">你已添加了%s,现在可以开始聊天了。</string>
    <string name="AlertDialogChat_Title">重发提示</string>
    <string name="AlertDialogChat_Content">该消息此前发送失败,是否选择重新发送这条信息?</string>
    <string name="AlertDialogChat_Cancel">取消发送</string>
    <string name="AlertDialogChat_Resend">重新发送</string>
    <string name="SplashPresenter_TokenIncorrect">签名过期，请尝试重新登录！</string>
    <string name="ConversationFragment_EmptyListHint">暂无聊天信息</string>
    <string name="EMMessageUtil_Draft">[草稿]</string>
    <string name="ConversationMenu_Top">置顶聊天</string>
    <string name="ConversationMenu_Clean">清空聊天记录</string>
    <string name="ConversationMenu_Remove">删除会话</string>
    <string name="ConversationMenu_CancelTop">取消置顶</string>
    <string name="ContactMenu_UpdateRemarkName">修改备注信息</string>
    <string name="RemarkInfoActivity_Confirm">确定</string>
    <string name="RemarkInfoActivity_Title">备注信息</string>
    <string name="ContactMenu_DeleteContact">删除好友</string>
    <string name="FindNewContactActivity_Title">添加好友</string>
    <string name="NotificationMessageActivity_Title">通知信息</string>
    <string name="ImageSelectorActivity_Title">选择图片</string>
    <string name="ContactMessageAdapter_Added">已添加</string>
    <string name="ContactMessageAdapter_Disagree">对方拒绝添加</string>
    <string name="ContactMessageAdapter_AlreadyRefused">已拒绝</string>
    <string name="ContactMessageAdapter_Refused">拒绝</string>
    <string name="ContactMessageAdapter_Requesting">同意</string>
    <string name="ContactMessageAdapter_Verifying">等待对方同意</string>
    <string name="ContactMessageAdapter_Delete">已删除</string>
    <string name="ContactMessageMenu_Delete">删除</string>
    <string name="EditContactLabelActivity_Title">添加标签</string>
    <string name="RemarkInfoActivity_RemarkNameLabel">备注名称</string>
    <string name="RemarkInfoActivity_TelephoneLabel">电话号码</string>
    <string name="RemarkInfoActivity_TelephoneHint">添加电话号码</string>
    <string name="RemarkInfoActivity_TagLabel">标签</string>
    <string name="RemarkInfoActivity_DescriptionHint">添加更多备注信息</string>
    <string name="RemarkInfoActivity_DescriptionLabel">描述</string>
    <string name="RemarkInfoActivity_LabelHint">添加标签对联系人进行分类</string>
    <string name="ContactInfoFragment_Call">呼叫</string>
    <string name="ImageSelectorActivity_Send">发送</string>
    <string name="ImageSelectorActivity_AllImage">所有图片</string>
    <string name="ImageViewPagerActivity_Selected">选择</string>
    <string name="ImageSelectorActivity_Original">原图</string>
    <string name="ImageSelectorActivity_Preview">预览</string>
    <string name="FindNewContactActivity_MyPhoneNumber">我的号码</string>
    <string name="FindNewContactActivity_SearchHint">手机号/群号/昵称</string>
    <string name="FindNewContactActivity_SearchNotExist">该用户不存在</string>
    <string name="FindNewContactActivity_SearchFail">搜索失败，请稍后再试</string>
    <string name="StrangerProfileActivity_VerifyContentHint">您需要填写验证申请,等待对方验证通过！</string>
    <string name="ProfileEditActivity_Title">编辑资料</string>
    <string name="ProfileEditActivity_BirthdayDialogTitle">请选择生日日期</string>
    <string name="ProfileEditActivity_SexDialogTitle">性别</string>
    <string name="ProfileEditActivity_NoSet">未设置</string>
    <string name="ProfileEditActivity_DateFormat">%d年%02d月%02d日</string>
    <string name="Save">保存</string>
    <string name="Confirm">确定</string>
    <string name="ImageSingleSelectorActivity_Title">选择一张图片</string>
    <string name="Man">男生</string>
    <string name="Woman">女生</string>
    <string name="ProfileEditActivity_NoneNickname">昵称不能为空</string>
    <string name="ChatActivity_ImageAlreadyOverdue">图片已经过期，无法查看</string>
    <string name="ChatActivity_VideoAlreadyOverdue">视频已经过期，无法播放</string>
    <string name="Profile_LabelNickname">昵称</string>
    <string name="Profile_LabelLocation">所在地区</string>
    <string name="Profile_LabelBirthday">出生日期</string>
    <string name="ProfileEditActivity_ReadCityInfoError">读取城市信息失败</string>
    <string name="ChatSetup_LabelSetTop">置顶</string>
    <string name="ChatSetup_HintSetTop">消息将始终显示在会话列表顶部</string>
    <string name="ChatSetup_LabelRemind">消息免打扰</string>
    <string name="ChatSetup_HintRemind">收到聊天信息时没有提示音以及消息提示</string>
    <string name="ChatSetup_LabelClearMessage">清空聊天记录</string>
    <string name="ChatSetup_HintClearMessage">清空本地聊天记录（不可恢复）</string>
    <string name="ChatSetup_Title">聊天信息</string>
    <string name="GroupMembersAdapter_Add">添加</string>
    <string name="ProfileEditActivity_LocationDialogTitle">请选择省市</string>
    <string name="Cancel">取消</string>
    <string name="GroupProfileActivity_MyGroupNicknameDialogTitle">我在本群的昵称</string>
    <string name="GroupProfileActivity_MyGroupNicknameDialogHint">设置你在群里的昵称，这个昵称只会在这个群内显示。</string>
    <string name="GroupProfileActivity_GroupNameDialogTitle">群聊名称</string>
    <string name="GroupProfileActivity_GroupNameDialogHint">设置该群聊的名称</string>
    <string name="CreateGroupActivity_Title">创建群聊</string>
    <string name="MyQRCodeActivity_Title">我的二维码</string>
    <string name="MyQRCodeActivity_Title2">群二维码</string>
    <string name="Scan">扫一扫</string>
    <string name="MyQRCodeActivity_ResetQRCode">刷新二维码</string>
    <string name="MyQRCodeActivity_SaveQRCode">保存到手机</string>
    <string name="LocationMapActivity_Title">发送位置</string>
    <string name="Send">发送</string>
    <string name="Search">搜索</string>
    <string name="LocationMapActivity_SearchHint">请输入搜索内容...</string>
    <string name="GroupListActivity_Title">群聊</string>
    <string name="GroupProfileActivity_NoticeDialogTitle">群公告</string>
    <string name="GroupProfileActivity_NoticeDialogHint">编辑群公告，该公告只有群主才能编辑。</string>
    <string name="GroupMenu_ExitGroup">退出该群组</string>
    <string name="GroupProfileActivity_QuitDialogHint">退出当前群组后，将不再收到此群的聊天信息</string>
    <string name="ChatActivity_VoiceRecorderButtonHint">按住说话</string>
    <string name="Location">位置</string>
    <string name="Album">相册</string>
    <string name="CropActivity_Title">裁剪图片</string>
    <string name="ContactOperationAdapter_DefaultReason">请求添加好友</string>
    <string name="ImageMultiSelectorActivity_SelectedCountLimitHint">最多只能选择%d张图片</string>
    <string name="CropImageActivity_SaveAvatarFail">保存头像失败，请稍候再试！</string>
    <string name="MyQRCodeActivity_SaveQRCodeFail">保存图片失败，请稍候再试！</string>
    <string name="MyQRCodeActivity_SaveQRCodeSuccess">图片保存到</string>
    <string name="GroupProfileActivity_GroupQRCodeTitle">群二维码</string>
    <string name="GroupProfileActivity_GroupQRCodeHint">通过扫描二维码可加入该群聊</string>
    <string name="MyQRCodeActivity_QRCodeHint">扫描上面的二维码，添加我好友</string>
    <string name="MyQRCodeActivity_QRCodeHint2">扫描上面的二维码，进入群组</string>
    <string name="VideoRecorderActivity_RecorderFail">目前相机无法录制视频，请稍后再试</string>
    <string name="VideoRecorderActivity_PlayVideoError">无法播放录制内容，请稍后再试！</string>
    <string name="shoot">拍摄</string>
    <string name="VideoPlayActivity_DownloadVideoFail">下载视频失败，请稍后再试！</string>
    <string name="VideoPlayActivity_PlayVideoFail">无法播放视频内容，请稍后再试！</string>
    <string name="Unit_Term">项</string>
    <string name="Unit_Age">岁</string>
    <string name="Unit_Second">秒</string>
    <string name="Unit_Meters">米</string>
</resources>