<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.RemarkInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Default_mToolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolbarTheme"
        app:title="@string/RemarkInfoActivity_Title"
        app:titleTextAppearance="@style/ToolbarTitleTheme.Light">

        <Button
            android:id="@+id/RemarkInfoActivity_mBtnConfirm"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_default_bt"
            android:elevation="2dp"
            android:text="@string/RemarkInfoActivity_Save"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|bottom"
                android:text="@string/RemarkInfoActivity_RemarkNameLabel"
                android:textSize="16sp" />

            <com.yzx.chat.widget.view.ClearEditText
                android:id="@+id/RemarkInfoActivity_mEtRemarkName"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_et_underline_default"
                android:gravity="bottom"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textCursorDrawable="@drawable/cursor_default"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="start|bottom"
                android:text="@string/RemarkInfoActivity_TelephoneLabel"
                android:textSize="16sp" />

            <com.yzx.chat.widget.view.ClearEditText
                android:id="@+id/RemarkInfoActivity_mEtTelephone"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_et_underline_default"
                android:gravity="center_vertical"
                android:hint="@string/RemarkInfoActivity_TelephoneHint"
                android:inputType="number"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textCursorDrawable="@drawable/cursor_default"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="start|bottom"
                android:text="@string/RemarkInfoActivity_TagLabel"
                android:textSize="16sp" />

            <com.yzx.chat.widget.view.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_et_underline_default"
                android:gravity="bottom"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textCursorDrawable="@drawable/cursor_default"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="start|bottom"
                android:text="@string/RemarkInfoActivity_DescriptionLabel"
                android:textSize="16sp" />

            <com.yzx.chat.widget.view.ClearEditText
                android:id="@+id/RemarkInfoActivity_mEtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/RemarkInfoActivity_DescriptionHint"
                android:background="@drawable/selector_et_underline_default"
                android:gravity="bottom"
                android:minHeight="24dp"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textCursorDrawable="@drawable/cursor_default"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</merge>




