<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">


    <ImageView
        android:id="@+id/mIvBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:scaleType="fitStart"
        android:src="?android:attr/homeAsUpIndicator"
        android:tint="@color/textColorPrimary" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="创建新用户"
        android:textSize="22sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="你也可以选择用微博或微信进行登录"
        android:textSize="15sp" />


    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_telephone2" />

        <EditText
            android:id="@+id/mEtTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:hint="@string/LoginActivity_Layout_Username"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:paddingStart="48dp"
            android:paddingEnd="44dp"
            android:paddingBottom="16dp"
            android:textSize="14sp" />


    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/mEtNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:hint="@string/LoginActivity_Layout_InputNick"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="48dp"
            android:paddingEnd="44dp"
            android:paddingBottom="16dp"
            android:textSize="14sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/mEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:hint="@string/LoginActivity_Layout_InputPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="48dp"
            android:paddingEnd="44dp"
            android:paddingBottom="16dp"
            android:textSize="14sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/ic_password_again" />

        <EditText
            android:id="@+id/mEtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="start|center_vertical"
            android:hint="@string/LoginActivity_Layout_Confirm"
            android:inputType="textPassword"
            android:paddingStart="48dp"
            android:paddingEnd="44dp"
            android:paddingBottom="16dp"
            android:textSize="14sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/mTvErrorHint"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp" />

    <com.yzx.chat.widget.view.ProgressButton
        android:id="@+id/mPBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/LoginActivity_Layout_Register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center">

        <TextView
            android:id="@+id/mTvLoginHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginActivity_Layout_HasUsernameHint"
            android:textColor="@color/selector_text_enable_change"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mTvJumpToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginActivity_Layout_Login"
            android:textColor="@color/selector_text_enable_change"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="8dp"
        android:text="@string/LoginActivity_Layout_CopyrightHint"
        android:textSize="12sp" />

</LinearLayout>
