<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_login" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginActivity_Layout_Username"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/FlipperLogin_mEtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:maxLength="30"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:paddingBottom="16dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="16dp"
        android:text="13631232530"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LoginActivity_Layout_InputPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/FlipperLogin_mEtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:paddingBottom="16dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="16dp"
        android:text="12345678"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color_white" />

    <TextView
        android:id="@+id/FlipperLogin_mTvLoginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_main_color_white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <ProgressBar
            android:id="@+id/FlipperLogin_mPbLoginProgress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <Button
            android:id="@+id/FlipperLogin_mBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/radius_btn_20dp"
            android:text="@string/LoginActivity_Layout_Login"
            android:textSize="13dp" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/LoginActivity_Layout_NonUsernameHint" />

        <Button
            android:id="@+id/FlipperLogin_mTvJumpToRegister"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/LoginActivity_Layout_Register"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>
